--- a/styles.css
+++ b/styles.css
@@ -1,32 +1,38 @@
 html,
 body {
-    margin: 0;
-    padding: 0;
-    height: 100%;
+  margin: 0;
+  padding: 0;
+  height: 100%;
 }
 
 form {
-    border: 1px solid #ccc;
-    padding: 1rem;
+  border: 1px solid #ccc;
+  padding: 1rem;
 }
 
 input,
 textarea {
-    display: block;
-    width: 100%;
-    margin-bottom: 1rem;
+  display: block;
+  width: 100%;
+  margin-bottom: 1rem;
 }
 
 form button {
-    display: block;
-    padding: 0.5rem 1rem;
-    background: hsl(120, 56%, 40%);
-    border: none;
-    color: #fff;
-    border-radius: 5px;
-    width: 5rem;
-    margin-left: auto;
+  display: block;
+  padding: 0.5rem 1rem;
+  background: hsl(120, 56%, 40%);
+  border: none;
+  color: #fff;
+  border-radius: 5px;
+  width: 5rem;
+  margin-left: auto;
 }
 
-
- 
+/* HEADER FILES */
+header {
+  background-color: teal;
+  color: white;
+  padding: 1rem;
+  margin-bottom: 1rem;
+  text-align: center;
+}
